--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
 theme: jekyll-theme-time-machine
+mkdir assets && cd assets
+mkdir css && cd css
+echo '---' >> style.scss
+echo '---' >> style.scss
+echo >> style.scss
+echo '@import "{{ site.theme }}";' >> style.scss
